* #RI-2056 - rename "Document Capabilities" group to "Document" * #RI-2056 - formant content for JSON "Multiple tags search" * #RI-2056 - fix text-overflow for footer links * #RI-2027 - fix container overflow * #RI-2021 - fix error message styles

--- a/redisinsight/ui/src/pages/workbench/components/enablament-area/EnablementArea/components/InternalPage/styles.scss
+++ b/redisinsight/ui/src/pages/workbench/components/enablament-area/EnablementArea/components/InternalPage/styles.scss
@@ -16,6 +16,9 @@
   a {
     color: var(--euiColorGhost);
     text-decoration: underline;
+    &:focus {
+      text-decoration: underline;
+    }
   }
   b, strong {
     font: normal normal normal 12px/16px Graphik;
